Bug 522095 - Google Book Search failure
Summary: Google Book Search failure
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-06-24 01:57 UTC by Robby Stephenson
Modified: 2026-06-27 13:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2026-06-24 01:57:07 UTC
I use tellico and it's book collection to keep track of books I want to
read and books I've already read.  This morning I went to update my list
with new titles and authors.  I use the Internet search function and
Google Book Search as a source.  I enter either the specific title or
the author's last name.  I can select the book I want from the list of
books returned from the search and click the "Add Entry" button.

For some reason the search is only returning the ISBN and an image of
the cover.  No other information is returned.  I checked by searching
for books already in my list and had the same result.
Comment 1 Robby Stephenson 2026-06-27 13:56:09 UTC
Git commit a9cdb36e1455f46bf5e47f344790db195ae29acf by Robby Stephenson.
Committed on 27/06/2026 at 13:56.
Pushed by rstephenson into branch '4.2'.

Use API key in Google Books volume query

Ignore empty volume results to avoid overwriting existing data.
FIXED-IN: 4.2.1

M  +4    -0    ChangeLog
M  +18   -7    src/fetch/googlebookfetcher.cpp

https://invent.kde.org/office/tellico/-/commit/a9cdb36e1455f46bf5e47f344790db195ae29acf
Comment 2 Robby Stephenson 2026-06-27 13:56:40 UTC
Git commit b80c12d86bea868d80602a3dd7446744f9e071d6 by Robby Stephenson.
Committed on 27/06/2026 at 13:56.
Pushed by rstephenson into branch 'master'.

Use API key in Google Books volume query

Ignore empty volume results to avoid overwriting existing data.
FIXED-IN: 4.2.1

M  +4    -0    ChangeLog
M  +18   -7    src/fetch/googlebookfetcher.cpp

https://invent.kde.org/office/tellico/-/commit/b80c12d86bea868d80602a3dd7446744f9e071d6