Use API key in Google Books volume query

Ignore empty volume results to avoid overwriting existing data.

BUG: 522095
FIXED-IN: 4.2.1